--- a/Apps/Searxng/compose.yml
+++ b/Apps/Searxng/compose.yml
@@ -13,3 +13,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}" # Add this line if traefik cannot detect the port of this container
+      - "homepage.group=Misc" # Group for this service on the homepage
+      - "homepage.name=Searxng" # Name of this service on the homepage
+      - "homepage.icon=searxng.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Private federated search engine" # Description of this service on the homepage
