--- a/Apps/AnythingLLM/compose.yml
+++ b/Apps/AnythingLLM/compose.yml
@@ -17,6 +17,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=GenAI Applications" # Group for this service on the homepage
+      - "homepage.name=AnythingLLM" # Name of this service on the homepage
+      - "homepage.icon=openai.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=AIO LLM tool" # Description of this service on the homepage
 
 volumes:
   anythingllm:
