--- a/Apps/Authentik/compose.yml
+++ b/Apps/Authentik/compose.yml
@@ -32,6 +32,7 @@ services:
       timeout: 3s
     volumes:
       - redis:/data
+
   authentik-server:
     image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2025.4.0}
     hostname: authentik
@@ -60,6 +61,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Foundation" # Group for this service on the homepage
+      - "homepage.name=Authentik" # Name of this service on the homepage
+      - "homepage.icon=authentik.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Identity Provider" # Description of this service on the homepage
     depends_on:
       authentik-postgresql:
         condition: service_healthy
