--- a/Apps/Jellyfin/compose.yml
+++ b/Apps/Jellyfin/compose.yml
@@ -20,6 +20,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Media"
+      - "homepage.name=Jellyfin"
+      - "homepage.icon=jellyfin.png"
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/"
+      - "homepage.description=Media server"
 
 volumes:
   jellyfin-config:
