--- a/Apps/Mealie/compose.yml
+++ b/Apps/Mealie/compose.yml
@@ -38,6 +38,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Media" # Group for this service on the homepage
+      - "homepage.name=Mealie" # Name of this service on the homepage
+      - "homepage.icon=mealie.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Recipe database" # Description of this service on the homepage
 
 volumes:
   mealie-data:
