--- a/Apps/Metabase/compose.yml
+++ b/Apps/Metabase/compose.yml
@@ -30,6 +30,11 @@ services:
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       # - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
       - "traefik.docker.network=traefik-net"
+      - "homepage.group=Data Analytics" # Group for this service on the homepage
+      - "homepage.name=Metabase" # Name of this service on the homepage
+      - "homepage.icon=metabase.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Self-served BI" # Description of this service on the homepage
 
   postgres:
     image: postgres:latest
