--- a/Apps/Metube/compose.yml
+++ b/Apps/Metube/compose.yml
@@ -20,3 +20,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Media" # Group for this service on the homepage
+      - "homepage.name=Metube" # Name of this service on the homepage
+      - "homepage.icon=youtube.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Youtube downloader" # Description of this service on the homepage
