--- a/Apps/Netdata/compose.yml
+++ b/Apps/Netdata/compose.yml
@@ -30,6 +30,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Foundation" # Group for this service on the homepage
+      - "homepage.name=Netdata" # Name of this service on the homepage
+      - "homepage.icon=netdata.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${HOME_SERVER_DOMAIN}:19999/" # Link to access this service on the homepage
+      - "homepage.description=System dashboard" # Description of this service on the homepage
 
 volumes:
   netdataconfig:
