--- a/Apps/PiHole/compose.yml
+++ b/Apps/PiHole/compose.yml
@@ -35,3 +35,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Foundation" # Group for this service on the homepage
+      - "homepage.name=PiHole" # Name of this service on the homepage
+      - "homepage.icon=pihole.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Adblock and DNS server" # Description of this service on the homepage
