--- a/Apps/Portainer/compose.yml
+++ b/Apps/Portainer/compose.yml
@@ -20,6 +20,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Foundation" # Group for this service on the homepage
+      - "homepage.name=Portainer" # Name of this service on the homepage
+      - "homepage.icon=portainer.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Container observability" # Description of this service on the homepage
 
 volumes:
   portainer_data:  # Define the named volume for persistent data
