--- a/Apps/Postgres/compose.yml
+++ b/Apps/Postgres/compose.yml
@@ -27,6 +27,11 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "homepage.group=Databases" # Group for this service on the homepage
+      - "homepage.name=Postgres" # Name of this service on the homepage
+      - "homepage.icon=postgres.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/" # Link to access this service on the homepage
+      - "homepage.description=Shared relational DB" # Description of this service on the homepage
 
 volumes:
   persistence-pg-data:
