--- a/Apps/Traefik/compose.yml
+++ b/Apps/Traefik/compose.yml
@@ -25,3 +25,9 @@ services:
       - traefik-net
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    labels:
+      - "homepage.group=Foundation" # Group for this service on the homepage
+      - "homepage.name=Traefik" # Name of this service on the homepage
+      - "homepage.icon=traefik.png" # Pick from https://github.com/homarr-labs/dashboard-icons
+      - "homepage.href=http://${HOME_SERVER_DOMAIN}:8080/" # Link to access this service on the homepage
+      - "homepage.description=Reverse proxy" # Description of this service on the homepage
