Refactored Mealie OIDC config

--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -11,3 +11,8 @@ JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 JELLYFIN_LOCAL_MEDIA_DIR="/home/nguyentran/Videos"
 METUBE_LOCAL_DOWNLOAD_DIR="/home/nguyentran/Videos" # Path on local machine where the media file would be stored
 METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
+
+#OAUTH
+MEALIE_OIDC_CLIENT_ID=CHANGE_ME
+MEALIE_OIDC_CLIENT_SECRET=CHANGE_ME
+
