--- a/Stacks/Home-Server/compose.override.yml
+++ b/Stacks/Home-Server/compose.override.yml
@@ -5,3 +5,7 @@ services:
     volumes:
       - ./homepage-config:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
+
+  pihole:
+    volumes:
+      - ./pihole.toml:/etc/pihole/pihole.toml
