--- a/Apps/OpenWebUI/default.env
+++ b/Apps/OpenWebUI/default.env
@@ -2,6 +2,9 @@ APP_NAME=openwebui
 APP_DOMAIN=openwebui
 APP_PORT=8080
 
+OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
+OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
+
 OLLAMA_BASE_URL=http://host.docker.internal:11434
 OLLAMA_WEB_SEARCH_ENGINE=searxng
 OLLAMA_SEARXNG_QUERY_URL="http://searxng/search?q=<query>"
