8 integrate sso for my stacks (#10)
* Updated stack and homepage

* Refactored Mealie OIDC config

* Force mealie to use local DNS to reach pihole

* Fix DNS problem of homestack

* Integrate OpenWEbUI with Authentik

* fix the mount path of home.env

--- a/Stacks/Home-Server/compose.yml
+++ b/Stacks/Home-Server/compose.yml
@@ -9,6 +9,8 @@ name: ${STACK_NAME}
 include:
   - path: "../../Substacks/Foundation/compose.yml" ## Foundation stack 
   - path: "../../Substacks/Media/compose.yml" ## Compose Stack
+  - path: "../../Substacks/GenAI-Apps/compose.yml" ## Compose Stack
+  - path: "../../Substacks/Troubleshooting/compose.yml" ## Compose Stack
   - path: "../../Apps/PiHole/compose.yml" ## App with custom envs
     env_file:
        - ../../Apps/PiHole/default.env
