--- a/Substacks/Foundation-DNS/compose.yml
+++ b/Substacks/Foundation-DNS/compose.yml
@@ -1,11 +1,15 @@
 # Foundation stack contains the core networking components that would be used by any other stack:
 # - Traefik: reverse proxy
+# - PiHole: DNS server and ad-blocker
 # - Portainer: managing docker containers
 # - Homepage: homepage dashboard
 # - Authentik: Identity Provider (IdP) to support SSO and LDAP inside the stack
 
 include:
   - path: "../../Apps/Traefik/compose.yml" ## Traefik: reverse proxy
+  - path: "../../Apps/PiHole/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/PiHole/default.env
   - path: "../../Apps/Portainer/compose.yml" ## App with custom envs
     env_file:
        - ../../Apps/Portainer/default.env
