Update the home server stack to use new DNS foundation stack

--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -1,18 +1,21 @@
 # Top level configs
-HOME_SERVER_DOMAIN="localhost" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
+HOME_SERVER_DOMAIN="bunbun.home" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
 HOME_SERVER_TZ="Australia/Adelaide"
 STACK_NAME="home-server"
 TRAEFIK_NETWORK="traefik-net" 
+
+PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home"
 
 # Jupyter Notebook
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 
 # Media stack
-JELLYFIN_LOCAL_MEDIA_DIR="/home/nguyentran/Videos"
-METUBE_LOCAL_DOWNLOAD_DIR="/home/nguyentran/Videos" # Path on local machine where the media file would be stored
+JELLYFIN_LOCAL_MEDIA_DIR="/media/gentran/GenVideos3"
+METUBE_LOCAL_DOWNLOAD_DIR="/media/gentran/GenVideos3/Videos" # Path on local machine where the media file would be stored
 METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
 
 #OAUTH
 MEALIE_OIDC_CLIENT_ID=CHANGE_ME
 MEALIE_OIDC_CLIENT_SECRET=CHANGE_ME
-
+OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
+OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
