Updated office stack and add news app

--- a/Stacks/Office-Lab/default.env
+++ b/Stacks/Office-Lab/default.env
@@ -5,3 +5,18 @@ STACK_NAME="office-lab"
 TRAEFIK_NETWORK="traefik-net" 
 USER_ID=1000
 GROUP_ID=1000
+
+# Local DNS Records
+PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home" # Pihole can be used as a DNS server. These options are to setup the domain resolution. THERE MUST BE NO SPACE BETWEEN ENTRIES, OTHERWISE THE CONFIGURATION WILL BE REJECTED BY PIHOLE
+
+# Jupyter Notebook
+JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
+
+# Media stack
+JELLYFIN_LOCAL_MEDIA_DIR="/var/home/nguyentran/Videos"
+METUBE_LOCAL_DOWNLOAD_DIR="/var/home/nguyentran/Videos" # Path on local machine where the media file would be stored
+METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
+
+#OAUTH
+OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
+OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
