--- a/Stacks/Office-Lab/compose.yml
+++ b/Stacks/Office-Lab/compose.yml
@@ -11,8 +11,27 @@ include:
   - path: "../../Substacks/Observability/compose.yml" ## Foundation stack 
   - path: "../../Substacks/Persistence/compose.yml" ## Data persistence stack 
   - path: "../../Substacks/Troubleshooting/compose.yml" ## Data persistence stack 
-  - path: "../../Substacks/Data-Analysis/compose.yml" ## Data analysis stack 
-  - path: "../../Substacks/Media/compose.yml" ## Media stack
-  - path: "../../Substacks/GenAI-Apps/compose.yml" ## GenAI applications stack 
-  - path: "../../Substacks/GenAI-Tools/compose.yml" ## GenAI engineering tools stack 
-  - path: "../../Substacks/Automation/compose.yml" ## GenAI engineering tools stack 
+  - path: "../../Apps/Metabase/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/Metabase/default.env
+  - path: "../../Apps/Jupyter/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/Jupyter/default.env
+  - path: "../../Apps/Metube/compose.yml" ## Youtube downloader
+    env_file:
+       - ../../Apps/Metube/default.env
+  - path: "../../Apps/Jellyfin/compose.yml" ## Media server
+    env_file:
+       - ../../Apps/Jellyfin/default.env
+  - path: "../../Apps/OpenWebUI/compose.yml" 
+    env_file:
+       - ../../Apps/OpenWebUI/default.env
+  - path: "../../Apps/Searxng/compose.yml"
+    env_file:
+       - ../../Apps/Searxng/default.env
+  - path: "../../Apps/Langflow/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/Langflow/default.env
+  - path: "../../Apps/Fusion/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/Fusion/default.env
