--- a/Stacks/Office-Lab/homepage-config/bookmarks.yaml
+++ b/Stacks/Office-Lab/homepage-config/bookmarks.yaml
@@ -6,3 +6,6 @@
     - Github:
         - abbr: GH
           href: https://github.com/nguyentran0212/personal-server
+    - OpenAI:
+        - abbr: OpenAI
+          href: https://platform.openai.com
