Finish integrating audiobookshelf. Closes #12

--- a/Stacks/Office-Lab/compose.yml
+++ b/Stacks/Office-Lab/compose.yml
@@ -35,3 +35,6 @@ include:
   - path: "../../Apps/Fusion/compose.yml" ## App with custom envs
     env_file:
        - ../../Apps/Fusion/default.env
+  - path: "../../Apps/Audiobookshelf/compose.yml" ## App with custom envs
+    env_file:
+       - ../../Apps/Audiobookshelf/default.env
