--- a/Stacks/Office-Lab/default.env
+++ b/Stacks/Office-Lab/default.env
@@ -13,10 +13,13 @@ PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home" # Pihole
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 
 # Media stack
-JELLYFIN_LOCAL_MEDIA_DIR="/var/home/nguyentran/Videos"
-METUBE_LOCAL_DOWNLOAD_DIR="/var/home/nguyentran/Videos" # Path on local machine where the media file would be stored
+JELLYFIN_LOCAL_MEDIA_DIR="/path/to/media/dir"
+METUBE_LOCAL_DOWNLOAD_DIR="/path/to/media/dir" # Path on local machine where the media file would be stored
 METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
 
 #OAUTH
 OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
 OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
+
+# Audiobookshelf
+AUDIOBOOKSHELF_MEDIA_DIR="/path/to/media/dir"
