--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -10,9 +10,10 @@ PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home"
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 
 # Media stack
-JELLYFIN_LOCAL_MEDIA_DIR="/media/gentran/GenVideos3"
-METUBE_LOCAL_DOWNLOAD_DIR="/media/gentran/GenVideos3/Videos" # Path on local machine where the media file would be stored
+JELLYFIN_LOCAL_MEDIA_DIR="/path/to/media/dir" # Path to local storage location of Jellyfin media
+METUBE_LOCAL_DOWNLOAD_DIR="/path/to/media/dir" # Path on local machine where the media file would be stored
 METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
+AUDIOBOOKSHELF_MEDIA_DIR="/path/to/media/dir" # Path to local storage for audio books and podcasts
 
 #OAUTH
 MEALIE_OIDC_CLIENT_ID=CHANGE_ME
