Integrated tailscale. Closes #11

--- a/Stacks/Office-Lab/default.env
+++ b/Stacks/Office-Lab/default.env
@@ -9,6 +9,13 @@ GROUP_ID=1000
 # Local DNS Records
 PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home" # Pihole can be used as a DNS server. These options are to setup the domain resolution. THERE MUST BE NO SPACE BETWEEN ENTRIES, OTHERWISE THE CONFIGURATION WILL BE REJECTED BY PIHOLE
 
+# Get an auth key from https://login.tailscale.com/admin/settings/keys
+TS_AUTHKEY=
+# Hostname to use for tailnet
+TS_HOSTNAME="office-lab-tailscale"
+# Your LAN subnet to advertise to the tailnet
+LAN_CIDR="192.168.1.1/32"
+
 # Jupyter Notebook
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 
