--- a/Apps/Tailscale/compose.yml
+++ b/Apps/Tailscale/compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   tailscale:
     image: tailscale/tailscale:latest
@@ -11,9 +10,10 @@ services:
     environment:
       - TS_AUTHKEY=${TS_AUTHKEY}
       - TS_HOSTNAME=${TS_HOSTNAME}
-      - LAN_CIDR=${LAN_CIDR}
+      - TS_ROUTES=${LAN_CIDR}
     volumes:
       - tailscale-data:/var/lib/tailscale
+
 volumes:
   tailscale-data:
     driver: local
