Add tailscale to homestack

--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -6,6 +6,13 @@ TRAEFIK_NETWORK="traefik-net"
 
 PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home"
 
+# Get an auth key from https://login.tailscale.com/admin/settings/keys
+TS_AUTHKEY=
+# Hostname to use for tailnet
+TS_HOSTNAME="office-lab-tailscale"
+# Your LAN subnet to advertise to the tailnet
+LAN_CIDR="192.168.1.1/32"
+
 # Jupyter Notebook
 JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
 
