WIP: updating apps to use new configuration env vars

--- a/Apps/Activepieces/compose.yml
+++ b/Apps/Activepieces/compose.yml
@@ -9,13 +9,14 @@ services:
     volumes:
       - ./cache:/usr/src/app/cache
     networks:
-      - traefik-net
+      - ${TRAEFIK_NETWORK}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
       - "homepage.group=Automation" # Group for this service on the homepage
       - "homepage.name=Activepieces" # Name of this service on the homepage
       - "homepage.icon=activepieces.png" # Pick from https://github.com/homarr-labs/dashboard-icons
