--- a/Apps/Mealie/compose.yml
+++ b/Apps/Mealie/compose.yml
@@ -21,8 +21,8 @@ services:
       - BASE_URL=http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`
       - OIDC_AUTH_ENABLED=true
       - OIDC_SIGNUP_ENABLED=true
-      - OIDC_CLIENT_ID=${MEALIE_OIDC_CLIENT_ID}
-      - OIDC_CLIENT_SECRET=${MEALIE_OIDC_CLIENT_SECRET} # MOVE THIS TO SECRET
+      - OIDC_CLIENT_ID=${OIDC_CLIENT_ID_MEALIE}
+      - OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET_MEALIE} # MOVE THIS TO SECRET
       - OIDC_CONFIGURATION_URL=http://authentik.${HOME_SERVER_DOMAIN}/application/o/mealie/.well-known/openid-configuration
       - OIDC_AUTO_REDIRECT=true
       - OIDC_REMEMBER_ME=true
