--- a/Apps/Fusion/compose.yml
+++ b/Apps/Fusion/compose.yml
@@ -8,13 +8,14 @@ services:
       # Change `./data` to where you want the files stored
       - fusion-data:/data
     networks:
-      - traefik-net
+      - ${TRAEFIK_NETWORK}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true" # Enable reverse proxy
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)" # Domain names to reach the app
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}" # Tell reverse proxy which port to use
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
       - "homepage.group=News" # Group for this service on the homepage
       - "homepage.name=Fusion" # Name of this service on the homepage
       - "homepage.icon=mdi-newspaper" # Pick from https://github.com/homarr-labs/dashboard-icons
