--- a/Apps/OpenWebUI/compose.yml
+++ b/Apps/OpenWebUI/compose.yml
@@ -2,18 +2,18 @@ services:
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
     environment:
-      OLLAMA_BASE_URL: ${OLLAMA_BASE_URL}
+      OLLAMA_BASE_URL: ${OPENWEBUI_OLLAMA_BASE_URL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       ENABLE_WEB_SEARCH: True
       WEB_SEARCH_RESULT_COUNT: 3
-      WEB_SEARCH_ENGINE: ${OLLAMA_WEB_SEARCH_ENGINE}
-      SEARXNG_QUERY_URL: ${OLLAMA_SEARXNG_QUERY_URL}
+      WEB_SEARCH_ENGINE: ${OPENEWBUI_WEB_SEARCH_ENGINE}
+      SEARXNG_QUERY_URL: ${OPENWEBUI_OLLAMA_SEARXNG_QUERY_URL}
       ENABLE_OAUTH_SIGNUP: true
       OAUTH_MERGE_ACCOUNTS_BY_EMAIL: true
       OAUTH_PROVIDER_NAME: Authentik
       OPENID_PROVIDER_URL: http://authentik.${HOME_SERVER_DOMAIN}/application/o/openwebui/.well-known/openid-configuration
-      OAUTH_CLIENT_ID: ${OPENWEBUI_OIDC_CLIENT_ID}
-      OAUTH_CLIENT_SECRET: ${OPENWEBUI_OIDC_CLIENT_SECRET}
+      OAUTH_CLIENT_ID: ${OIDC_CLIENT_ID_OPENWEBUI}
+      OAUTH_CLIENT_SECRET: ${OIDC_CLIENT_SECRET_OPENEWBUI}
       OAUTH_SCOPES: openid email profile
       OPENID_REDIRECT_URI: http://${APP_DOMAIN}.${HOME_SERVER_DOMAIN}/oauth/oidc/callback
     volumes:
