--- a/Apps/OpenWebUI/default.env
+++ b/Apps/OpenWebUI/default.env
@@ -2,10 +2,10 @@ APP_NAME=openwebui
 APP_DOMAIN=openwebui
 APP_PORT=8080
 
-OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
-OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
-
-OLLAMA_BASE_URL=http://host.docker.internal:11434
-OLLAMA_WEB_SEARCH_ENGINE=searxng
-OLLAMA_SEARXNG_QUERY_URL="http://searxng/search?q=<query>"
+OPENWEBUI_OLLAMA_BASE_URL=http://host.docker.internal:11434
+OPENWEBUI_WEB_SEARCH_ENGINE=searxng
+OPENWEBUI_SEARXNG_QUERY_URL="http://searxng/search?q=<query>"
 OPENAI_API_KEY=${OPENAI_API_KEY}
+
+OIDC_CLIENT_ID_OPENWEBUI=CHANGE_ME
+OIDC_CLIENT_SECRET_OPENWEBUI=CHANGE_ME
