--- a/Apps/Netshoot/compose.yml
+++ b/Apps/Netshoot/compose.yml
@@ -5,10 +5,11 @@ services:
     tty: true        # Allocate a pseudo-TTY
     stdin_open: true # Keep stdin open so you can attach a terminal
     networks:
-      - traefik-net
+      - ${TRAEFIK_NETWORK}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
