--- a/Apps/Portainer/compose.yml
+++ b/Apps/Portainer/compose.yml
@@ -13,13 +13,14 @@ services:
       - portainer_data:/data  # Create a named volume for Portainer data
     restart: unless-stopped
     networks:
-      - traefik-net
+      - ${TRAEFIK_NETWORK}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}.rule=Host(`${APP_DOMAIN}.${HOME_SERVER_DOMAIN}`) || Host(`${APP_DOMAIN}.localhost`)"
       - "traefik.http.services.${APP_NAME}.loadbalancer.server.port=${APP_PORT}"
+      - "traefik.docker.network=${STACK_NAME}_${TRAEFIK_NETWORK}"
       - "homepage.group=Foundation" # Group for this service on the homepage
       - "homepage.name=Portainer" # Name of this service on the homepage
       - "homepage.icon=portainer.png" # Pick from https://github.com/homarr-labs/dashboard-icons
