--- a/Substacks/Foundation-DNS-TS/compose.yml
+++ b/Substacks/Foundation-DNS-TS/compose.yml
@@ -18,4 +18,4 @@ include:
        - ../../Apps/Tailscale/default.env
 
 networks:
-  traefik-net: # Traefik network connecting internal apps to the reverse proxy
+  ${TRAEFIK_NETWORK}: # Traefik network connecting internal apps to the reverse proxy
