Updated default env of home-server

--- a/Stacks/Home-Server/default.env
+++ b/Stacks/Home-Server/default.env
@@ -1,29 +1,18 @@
-# Top level configs
-HOME_SERVER_DOMAIN="bunbun.home" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
+# Stack-level Configuration
+HOME_SERVER_DOMAIN="domain.tld" # Domain name to access the stack. App would be available as subdomain (e.g., app.localhost)
 HOME_SERVER_TZ="Australia/Adelaide"
 STACK_NAME="home-server"
-TRAEFIK_NETWORK="traefik-net" 
+LAN_CIDR="192.168.1.2/32" # LAN subnet to be advertised on tailscale network
+MEDIA_DIR="/path/to/media/dir/" # Directory of media content to be created and consumed by the stack
+WORK_DIR="/path/to/media/dir" # Directory of media content to be created and consumed by the stack
 
-PIHOLE_EXTRA_HOSTS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home"
-
-# Get an auth key from https://login.tailscale.com/admin/settings/keys
-TS_AUTHKEY=
-# Hostname to use for tailnet
-TS_HOSTNAME="office-lab-tailscale"
-# Your LAN subnet to advertise to the tailnet
-LAN_CIDR="192.168.1.1/32"
-
-# Jupyter Notebook
-JUPYTER_WORKDIR="/var/home/nguyentran/Documents"
-
-# Media stack
-JELLYFIN_LOCAL_MEDIA_DIR="/path/to/media/dir" # Path to local storage location of Jellyfin media
-METUBE_LOCAL_DOWNLOAD_DIR="/path/to/media/dir" # Path on local machine where the media file would be stored
-METUBE_COOKIE_TXT_PATH="./cookies-youtube-com.txt" # Cookie file from YouTube
-AUDIOBOOKSHELF_MEDIA_DIR="/path/to/media/dir" # Path to local storage for audio books and podcasts
+# Foundation substack configurations with Traefik, PiHole and Tailscale
+TRAEFIK_NETWORK="traefik-net" # Name of Docker bridge network used by traefik to reach services
+PIHOLE_LOCAL_DNS_RECORDS="192.168.1.1 gateway.home;192.168.1.2 gateway2.home" # Pihole can be used as a DNS server. These options are to setup the domain resolution. THERE MUST BE NO SPACE BETWEEN ENTRIES, OTHERWISE THE CONFIGURATION WILL BE REJECTED BY PIHOLE
+TS_AUTHKEY= # Get an auth key from https://login.tailscale.com/admin/settings/keys
 
 #OAUTH
-MEALIE_OIDC_CLIENT_ID=CHANGE_ME
-MEALIE_OIDC_CLIENT_SECRET=CHANGE_ME
-OPENWEBUI_OIDC_CLIENT_ID=CHANGE_ME
-OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
+OIDC_CLIENT_ID_MEALIE=CHANGE_ME
+OIDC_CLIENT_SECRET_MEALIE=CHANGE_ME
+OIDC_CLIENT_ID_OPENWEBUI=CHANGE_ME
+OIDC_CLIENT_SECRET_OPENWEBUI=CHANGE_ME
