Update stack template

--- a/Stacks/Template/compose.yml
+++ b/Stacks/Template/compose.yml
@@ -5,6 +5,6 @@ include:
   - path: "../../Substacks/Foundation/compose.yml" ## Foundation substack 
   # - path: "../Substacks/Persistence/compose.yml" ## Data persistence substack 
   # - path: "../Substacks/Substack-1/compose.yml" ## Other substack 
-  - path: "../../Apps/App-Name-1/compose.yml" ## App with custom envs
-    env_file:
-       - ../../Apps/App-Name-1/default.env
+  # - path: "../../Apps/App-Name-1/compose.yml" ## App with custom envs
+  #   env_file:
+  #      - ../../Apps/App-Name-1/default.env
