--- a/Stacks/Office-Lab/default.env
+++ b/Stacks/Office-Lab/default.env
@@ -30,3 +30,13 @@ OPENWEBUI_OIDC_CLIENT_SECRET=CHANGE_ME
 
 # Audiobookshelf
 AUDIOBOOKSHELF_MEDIA_DIR="/path/to/media/dir"
+
+# Activepieces
+## Random Long Password (Optional for community edition)
+AP_API_KEY=
+
+## 256 bit encryption key, 32 hex character
+AP_ENCRYPTION_KEY=
+
+## JWT Secret
+AP_JWT_SECRET=
