--- a/Apps/Activepieces/default.env
+++ b/Apps/Activepieces/default.env
@@ -13,16 +13,16 @@ AP_ENCRYPTION_KEY=
 AP_JWT_SECRET=
 
 AP_ENVIRONMENT=prod
-# AP_FRONTEND_URL=http://localhost:8080
+AP_FRONTEND_URL="http://0.0.0.0:8080"
 AP_WEBHOOK_TIMEOUT_SECONDS=30
 AP_TRIGGER_DEFAULT_POLL_INTERVAL=5
 AP_POSTGRES_DATABASE=activepieces
-AP_POSTGRES_HOST=postgres
+AP_POSTGRES_HOST=activepieces-postgres
 AP_POSTGRES_PORT=5432
 AP_POSTGRES_USERNAME=postgres
 AP_POSTGRES_PASSWORD=activepieces_pg
 AP_EXECUTION_MODE=UNSANDBOXED
-AP_REDIS_HOST=redis
+AP_REDIS_HOST=activepieces-redis
 AP_REDIS_PORT=6379
 AP_FLOW_TIMEOUT_SECONDS=600
 AP_TELEMETRY_ENABLED=true
