Bug fix for the networking of postgres database

--- a/Apps/Postgres/compose.yml
+++ b/Apps/Postgres/compose.yml
@@ -8,6 +8,7 @@ services:
       - persistence-pg-data:/var/lib/postgresql/data/
     networks:
       - postgres-net
+      - ${TRAEFIK_NETWORK}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
